# routes/auth.route.js
@@ -1,9 +1,14 @@
 const express = require('express');
-const { signIn, signUp } = require('../controllers/auth.controller.js');
-const { validateBody, schemas } = require('../middlewares/validate.js');
+const { signIn, signUp, sendVerify, resetPassword, myProfile, verifyAccount, changePassword } = require('../controllers/auth.controller.js');
+const { validateBody, schemas, validateQueryParams } = require('../middlewares/validate.js');
 const authRouter = express.Router();
 
-authRouter.post('/login', validateBody(schemas.loginBody), signIn);
-authRouter.post('/register', validateBody(schemas.loginBody), signUp);
+authRouter.get('/login', validateQueryParams(schemas.loginBody), signIn);
+authRouter.post('/register', validateBody(schemas.registerBody), signUp);
+authRouter.post('/send_verify_code', validateQueryParams(schemas.verifyBody), sendVerify);
+authRouter.post('/reset_password', validateQueryParams(schemas.verifyBody), resetPassword);
+authRouter.post('/verify_account', verifyAccount);
+authRouter.patch('/change_password/:id', validateQueryParams(schemas.queryId), changePassword);
+authRouter.get('/my_profile', validateBody(schemas.queryId), myProfile);
 
 module.exports = authRouter;
